<resources>
    <string name="app_name">CosmoTracker</string>

    <string name="nav_main">Главная</string>
    <string name="nav_subs">Подписки</string>
    <string name="nav_info">Доп. информация</string>
    <string name="nav_settings">Настройки</string>

    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>

    <string name="down">Дальше</string>
    <string name="emptyList">Список пуст</string>
    <string name="nextArrival">Дата следующего прибытия</string>

    <string name="comet">Комета</string>
    <string name="eclipse">Затмение</string>
    <string name="event">Метеор</string>
    <string name="planet">Планета</string>

    <string name="eye">Глаз</string>
    <string name="bino">Бинокль</string>
    <string name="tele">Телескоп</string>

    <string name="type">Тип события</string>
    <string name="vis">Тип видимости</string>
    <string name="order">Порядок</string>

    <string name="autor">Автор:</string>
    <string name="myName">Егор Костенко</string>
    <string name="email">ekostenkodev@gmail.com</string>



    <string-array name="cosmoSort">
        <item>По возрастанию</item>
        <item>По убыванию</item>
    </string-array>

</resources>
