<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >


<include android:id="@+id/toolbar"
    layout="@layout/toolbar"></include>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_stars"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@android:style/Theme.DeviceDefault.Dialog.NoActionBar">



    <TextView
        android:id="@+id/sort_text_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="10sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_comets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/comet"
        android:theme="@style/SwitchCompatTheme" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_eclipses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eclipse"
        android:theme="@style/SwitchCompatTheme"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:theme="@style/SwitchCompatTheme"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_planets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planet"
        android:theme="@style/SwitchCompatTheme"/>

    <TextView
        android:id="@+id/sort_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/vis"
        android:textSize="10sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_eyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eye"
        android:theme="@style/SwitchCompatTheme"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_binoculars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bino"
        android:theme="@style/SwitchCompatTheme"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sort_telescope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tele"
        android:theme="@style/SwitchCompatTheme"/>

    <TextView
        android:id="@+id/sort_text_asc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/order"
        android:textSize="10sp" />

    <Spinner
        android:id="@+id/sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/cosmoSort" />

    <Button
        android:id="@+id/sort_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/button"
        android:onClick="onSortClick"
        android:text="сортировать" />

</LinearLayout>
</LinearLayout>